--- a/app/src/main/res/layout/activity_empanada_de_queso.xml
+++ b/app/src/main/res/layout/activity_empanada_de_queso.xml
@@ -9,12 +9,13 @@
     tools:context=".EmpanadaDeQueso">
 
     <!-- Boton Atras -->
-    <Button
+    <ImageButton
         android:id="@+id/btnRecetasEmpanadas"
-        android:layout_width="102dp"
-        android:layout_height="43dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:backgroundTint="#D52B1E"
-        android:text="Atrás"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:contentDescription="Atrás"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="20dp"
@@ -47,20 +48,26 @@
         app:layout_constraintTop_toBottomOf="@id/textView8"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <!-- Ingredientes -->
-    <TextView
-        android:id="@+id/IngredientesEQueso"
+    <!-- Ingredientes con Scroll -->
+    <ScrollView
+        android:id="@+id/scrollIngredientesEQueso"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Ingredientes:\n - 1 kilo de harina\n - 120 gr de manteca o margarina\n - 1 cucharadita de Sal de Mar\n - 1 cucharadita de azúcar\n - 1 taza de leche\n - 1 taza de agua\n - 200 gr de queso mantecoso\n - Aceite"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:layout_height="160dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toTopOf="@id/imgEmpanada"
         app:layout_constraintStart_toEndOf="@id/imgEmpanada"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="20dp"/>
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/IngredientesEQueso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ingredientes:\n - 1 kilo de harina\n - 120 gr de manteca o margarina\n - 1 cucharadita de Sal de Mar\n - 1 cucharadita de azúcar\n - 1 taza de leche\n - 1 taza de agua\n - 200 gr de queso mantecoso\n - Aceite"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+    </ScrollView>
 
     <!-- Texto "Preparación:" -->
     <TextView
